Close navbar on esc-key fixed, hide scrollbar on navbar active, reusable parallax scroll method implemented as an event inside root component, cleaned up the scripts
Changes:
modified:   src/App.vue
modified:   src/components/MyWorld.vue
modified:   src/components/NavigationBar.vue
modified:   src/components/RepeatingWords.vue
modified:   src/store/index.js
modified:   src/styles/app.scss
modified:   src/styles/intro.scss
modified:   src/styles/my_world.scss
modified:   src/styles/navbar.scss
modified:   src/styles/repeating_words.scss

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,6 +2,7 @@
 
 body {
   background-color: $body-background-color;
+  overflow-x: hidden;
 }
 
 #app {
@@ -15,14 +16,21 @@ body {
 
 
 body::-webkit-scrollbar {
-  width: 0.2em;
+  width: 0.4em;
+  scroll-behavior: smooth !important;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(212, 212, 212);
 }
 
 body::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  box-shadow: inset 0 0 6px $body-background-color;
+  -webkit-box-shadow: inset 0 0 6px $body-background-color;
 }
 
 body::-webkit-scrollbar-thumb {
-background-color: red;
-outline: 1px solid red;
+  background-color: rgb(255, 255, 255);
+  outline: 1px solid red;
+  border-radius: 1px;
 }
