--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -74,7 +74,7 @@
 
             display: flex;
             align-self: flex-start;
-            transform: translateY(110%);
+            transform: translateY(100%);
             margin-left: 3rem;
 
             p {
