--- a/src/styles/my_world.scss
+++ b/src/styles/my_world.scss
@@ -6,17 +6,32 @@
     position: relative;
     top: 40rem;
     min-height: 100vh;
-    p {
+    margin-bottom: 100px;
+    .welcome-to-my-world {
         text-align: center;
         position: relative;
+        left: 3em;
         font-size: 5em;
         text-transform: uppercase;
         white-space: nowrap;
+    }
 
-        span {
-            color: $body-background-color;
-            -webkit-text-stroke-color: white;
-            -webkit-text-stroke-width: 1px;
+    .facts {
+        text-align: left;
+        padding-left: 3rem;
+        padding-top: 3rem;
+        p {
+            padding: 2rem 0 0 0;
+            font-size: 3em;
         }
+        p:first-of-type {
+            position: relative;
+            top: 0;
+        }
+    }
+    span {
+        color: $body-background-color;
+        -webkit-text-stroke-color: white;
+        -webkit-text-stroke-width: 1px;
     }
 }
