--- a/src/styles/repeating_words.scss
+++ b/src/styles/repeating_words.scss
@@ -4,7 +4,7 @@
     position: fixed;
     left: 0;
     z-index: 0;
-    animation: moveInfinitely 30s linear infinite;
+    /* animation: moveInfinitely 30s linear infinite; */
     cursor: default;
 
     p {
